--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,11 @@
 # Use an official Python runtime as a parent image
-FROM python:3.10-slim
+FROM python:3.11-slim
 
 # Set the working directory in the container
 WORKDIR /usr/src/app
+
+# Install libmagic
+RUN apt-get update && apt-get install -y libmagic1
 
 # Copy the requirements file
 COPY requirements.txt ./
